# Exercise

./: .gitignore
Bash/: for-1.sh  for-2.sh  ksvr-1.sh  ksvr-2.sh  until-2.sh  until-3.sh  while-1.sh
Bash/BashSourceTest/: bash_source_test.sh
Bash/EOFTest/: e.sh
Bash/Misc/: bs.sh  bs_test.sh  merge-mp4.sh  redire.js  rnd.sh
Bash/StrTest/: app.sh  bak_clean.sh
Bash/SyntaxTest/: case-1.sh  case-2.sh  for-3.sh  for-4.sh  if-1.sh  if-2.sh  if-3.sh  until-1.sh
CLua/: Makefile
CPlusPlus/: .gitignore
CPlusPlus/BigLittleEndian/: app.c
CPlusPlus/Boost/: nocopy.cpp
CPlusPlus/BubbleSort/: BubbleSort.cpp
CPlusPlus/CJsonTest/: .gitignore  CMakeLists.txt  conf.json  main.c
CPlusPlus/CopyConstructor/: CopyConstructor.cpp
CPlusPlus/FibonacciTest/: app.c
CPlusPlus/HeapSort/: HeapSort-T.cpp  HeapSort-T2.cpp  HeapSort-T3.cpp  HeapSort.cpp
CPlusPlus/HelloWorld/: helloworld.cpp
CPlusPlus/IntVsFloatTest/: IntVsFloat.cpp
CPlusPlus/LibevTest/: svr.c
CPlusPlus/LibeventTest/: app.c  httpSvr.c  sample.html
CPlusPlus/MergeSort/: MergeSort-2.cpp  MergeSort.cpp
CPlusPlus/MsgPackTest/: MsgPackTest.sln
CPlusPlus/PipeTest/: r.c  w.c
CPlusPlus/ProtobufTest/: chatmsg.proto  cli.cpp
CPlusPlus/QuickSort/: QuickSort-1.cpp  QuickSort-T.cpp  QuickSort-T1.cpp  QuickSort-T2.cpp  QuickSort.cpp
CPlusPlus/SealedClass/: SealedClass.cpp
CPlusPlus/SocketTest/: app.c
CPlusPlus/TraitsTest/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp
CSharp/: .gitignore
Java/: .gitignore
Rust/ESP-IDF-Rust/esp-idf-template/: Cargo.toml  up-esp32c3.sh
(+1899 files in other folders)
